# Catan_analyser

./: .gitignore  BENCHMARK_CLI_TUTORIAL.md  CATAN_FULL_SIM_FRAMEWORK_FROM_SCRATCH.md  CHANGELOG.md  FULL_GAME_ANALYSIS_FRAMEWORK.md  FUTURE_UPGRADES.md  GT_ENGINE_UPGRADE_LOG.md  GTv3_AB_KILLER_UPGRADE_ROADMAP.md  GTv3_Hybrid_Upgrade_Plan.md  How the king has fallen.md  LETS UPGRADE THIS SHIT.md  README.md  THREE_ENGINES_SUPPORTING_FILES_UPGRADE_GUIDE.md  UI_IMPROVEMENTS.md  UPGRADES_IMPLEMENTED.md  game_theory_engine_v1_3_0.py  game_theory_engine_v3_0_0.py  main.py  pyproject.toml  tree_search_utils_robber_fix.py
ChatGpt PRO/: three_engines_py
catan_analyzer/: __init__.py  app.py
catan_analyzer/analysis/: __init__.py  blocking.py  draft.py  fullgame_rollout.py  knowledge_test.py  mcts_lite.py  phase_rollout.py  runtime.py  scoring.py  seeding.py  simulation.py  topology.py  types.py
catan_analyzer/domain/: __init__.py  board.py  randomizer.py
catan_analyzer/game/: __init__.py  actions.py  awards.py  engine.py  policies.py  rules.py  state.py
catan_analyzer/ui/: __init__.py  board_canvas.py  explainability.py  mode_descriptions.py  panels.py  themes.py
catanatron/cli/: benchmark_engines.py  cli_players.py  play.py
catanatron/players/: game_theory_engine.py  game_theory_engine_v2.py  (+4 more)
tests/: test_analysis.py  test_board.py  test_catanatron_integration.py  test_engine_integration.py  test_fullgame_analysis.py  test_game_rules.py  test_knowledge_test.py  test_mode_descriptions.py  test_randomizer.py  test_runtime.py  test_themes.py  test_ui_explainability.py
(+2 files in other folders)
